--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -57,21 +57,9 @@ nav {
 	display: flex;
 }
 
-nav a {
-	margin-left: 1vh;
-	padding: 1vh;
-	height: 100%;
-	min-width: 8vh;
-	border-radius: 1vh;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	background-color: var(--fill);
-}
-
 main {
 	margin-bottom: env(safe-area-inset-bottom);
-	padding: 2vh 2vh 10vh 2vh;
+	padding: 2vh 2vh 2vh 2vh;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
@@ -104,7 +92,7 @@ h6 {
 }
 
 section {
-	margin-top: 2vh;
+	margin-bottom: 2vh;
 	padding: 2vh;
 	border-radius: 2vh;
 	background-color: var(--tertiary);
@@ -120,7 +108,7 @@ input {
 	cursor: pointer;
 }
 
-input[type="email"], input[type="password"] {
+button, input {
 	padding: 1vh;
 	border-radius: 1vh;
 }
@@ -130,7 +118,7 @@ input[type="email"], input[type="password"] {
 		display: initial;
 	}
 	
-	input:hover, nav a:hover {
+	button:hover, input:hover, nav a:hover {
 		background-color: var(--secondary);
 	}
 }
