--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -11,7 +11,7 @@
 	--tertiary: #ecf;
 	--content: #000;
 	--fill: #fff;
-	overscroll-behavior-y: none;
+	overscroll-behavior: none;
 	user-select: none;
 }
 
@@ -20,7 +20,6 @@
 	--primary: #012;
 	--secondary: #123;
 	--tertiary: #012;
-/*	--tertiary: #316;*/
 	--content: #fff;
 	--fill: #666;
 	}
@@ -43,22 +42,8 @@ body {
 	color: var(--content);
 }
 
-header {
-	position: fixed;
-	bottom: env(safe-area-inset-bottom);
-	width: 100vw;
-	padding: 2vh;
-	display: flex;
-	justify-content: space-between;
-	background-color: var(--primary);
-}
-
-nav {
-	display: flex;
-}
-
 main {
-	margin-bottom: env(safe-area-inset-bottom);
+	margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 	padding: 2vh 2vh 2vh 2vh;
 	display: flex;
 	flex-direction: column;
@@ -101,24 +86,27 @@ section {
 div {
 	display: flex;
 	flex-direction: column;
+	align-items: baseline;
 }
 
 input {
+	margin-bottom: 1vh;
+	padding: 1vh;
+	border-radius: 1vh;
 	background-color: var(--fill);
 	cursor: pointer;
 }
 
-button, input {
+button {
+	margin-right: 1vh;
 	padding: 1vh;
 	border-radius: 1vh;
+	background-color: var(--accent);
+	cursor: pointer;
 }
 
 @media screen and (min-width: 600px) {
-	.logo h1 {
-		display: initial;
-	}
-	
-	button:hover, input:hover, nav a:hover {
+	button:hover, input:hover {
 		background-color: var(--secondary);
 	}
 }
