--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -76,8 +76,27 @@ h6 {
 	font-size: 1.5vh;
 }
 
+header {
+	padding: 2vh;
+	display: flex;
+	align-items: center;
+	background-color: var(--secondary);
+	
+	& img {
+		margin-right: 1vh;
+		height: 3.5vh;
+	}
+}
+
 section {
 	margin-bottom: 2vh;
+	padding: 2vh;
+	border-radius: 2vh;
+	background-color: var(--tertiary);
+}
+
+dialog {
+	margin: auto;
 	padding: 2vh;
 	border-radius: 2vh;
 	background-color: var(--tertiary);
