--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -94,11 +94,19 @@ section {
 	background-color: var(--secondary);
 }
 
+section div {
+	overflow: scroll;
+}
+
 dialog {
 	margin: auto;
 	padding: 2vh;
 	border-radius: 2vh;
 	background-color: var(--secondary);
+}
+
+dialog div {
+	flex-direction: column;
 }
 
 div {
@@ -123,10 +131,9 @@ button {
 
 table {
 	padding: 1vh;
-	border: 1px solid var(--content);
+	border: 1.5px solid var(--content);
 	border-spacing: 1vh;
 	border-radius: 1vh;
-	background-color: var(--tertiary);
 }
 
 table:not(:last-of-type) {
@@ -147,8 +154,8 @@ thead th {
 
 td {
 	padding: 1.5vh;
-	border: 1px solid var(--content);
-	border-radius: 1vh;
+	border: 1.5px solid var(--content);
+	border-radius: 0.5vh;
 }
 
 @media screen and (min-width: 600px) {
