--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 /* Order: @import, :root, *, Elements, Classes, IDs, Attributes, Selectors, Nesting Selectors, Pseudo-Elements, Pseudo-Classes, At-Rules */
 /* Order: Position, Size, Shape, Color, Function */
+
 @import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wdth,wght@0,75..125,100..900;1,75..125,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Chivo+Mono:ital,wght@0,100..900;1,100..900&display=swap");
 
@@ -24,6 +25,7 @@
 }
 
 body {
+	margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 	height: 100vh;
 	accent-color: var(--accent);
 	background-color: var(--fill);
@@ -41,12 +43,10 @@ body {
 }
 
 main {
-	margin: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
 	padding: 2vh 2vh 2vh 2vh;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
-	overflow: scroll;
 }
 
 h1 {
@@ -54,6 +54,7 @@ h1 {
 }
 
 h2 {
+	margin-bottom: 2vh;
 	font-size: 3.25vh;
 }
 
@@ -84,11 +85,6 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	background-color: var(--primary);
-
-	& img {
-		margin-right: 1vh;
-		height: 3.5vh;
-	}
 }
 
 section {
@@ -98,10 +94,6 @@ section {
 	background-color: var(--secondary);
 }
 
-section div {
-	overflow: scroll;
-}
-
 dialog {
 	margin: auto;
 	padding: 2vh;
@@ -109,16 +101,16 @@ dialog {
 	background-color: var(--secondary);
 }
 
-dialog div {
-	flex-direction: column;
-}
-
 div {
 	display: flex;
+	gap: 1vh;
+
+	&:not(:last-of-type) {
+		margin-bottom: 1vh;
+	}
 }
 
 input {
-	margin-bottom: 1vh;
 	padding: 1vh;
 	border-radius: 1vh;
 	background-color: var(--fill);
@@ -126,48 +118,23 @@ input {
 }
 
 button {
-	margin-right: 1vh;
 	padding: 1vh;
 	border-radius: 1vh;
 	background-color: var(--accent);
 	cursor: pointer;
 }
 
-table {
-	padding: 1vh;
-	border: 1.5px solid var(--content);
-	border-spacing: 1vh;
-	border-radius: 1vh;
+.logo {
+	margin-right: 1vh;
+	height: 3.5vh;
 }
 
-table:not(:last-of-type) {
-	margin-right: 2vh;
+.flex-column {
+	flex-direction: column;
 }
 
-th {
-	text-align: right;
-	font-weight: 400;
-	font-family: Chivo Mono, ui-monospace, monospace;
-}
-
-thead th {
-	font-size: 2.5vh;
-	font-weight: revert;
-	font-family: revert;
-}
-
-td {
-	padding: 1.5vh;
-	border: 1.5px solid var(--content);
-	border-radius: 0.5vh;
-}
-
-square {
-	margin-left: 1vh;
-	width: 3vh;
-	height: 3vh;
-	border: 1.5px solid var(--content);
-	border-radius: 0.5vh; 
+.history {
+	overflow: scroll;
 }
 
 .legend {
