--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,11 @@ header {
 	background-color: var(--primary);
 }
 
+nav {
+	display: flex;
+	gap: 1vh;
+}
+
 section {
 	margin-bottom: 2vh;
 	padding: 2vh;
@@ -105,7 +110,7 @@ div {
 	display: flex;
 	gap: 1vh;
 
-	&:not(:last-of-type) {
+	&:not(:last-child) {
 		margin-bottom: 1vh;
 	}
 }
@@ -138,7 +143,6 @@ button {
 }
 
 .legend {
-	margin-top: 1vh;
 	align-items: center;
 }
 
