--- a/styles/main.css
+++ b/styles/main.css
@@ -165,6 +165,10 @@ input[type="range"]:hover {
 	background-color: var(--fill);
 }
 
+textarea {
+	resize: vertical;
+}
+
 .button {
 	padding: 1vh;
 	border-radius: 1vh;
@@ -203,6 +207,7 @@ input[type="range"]:hover {
 #happiness_scale_number {
 	padding: 0.5vh;
 	border-radius: 2vh;
+	font-family: Chivo Mono, ui-monospace, monospace;
 	background-color: var(--accent);
 }
 
